--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:visibility="gone"
         android:text="@string/emptyText"
         android:gravity="center"
         android:textSize="32dp"
@@ -25,11 +24,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="-6dp"
+        android:layout_marginTop="50dp"
         android:layout_above="@+id/btnAddItem" />
 
+
     <Button
-        android:id="@+id/helpBtn"
+        android:id="@+id/todoHelpBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -49,7 +49,9 @@
         android:layout_alignParentStart="true"
         android:layout_toLeftOf="@+id/btnAddItem"
         android:layout_toStartOf="@+id/btnAddItem"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:inputType="textCapSentences"
+        android:imeOptions="actionDone" />
 
     <Button
         android:layout_width="wrap_content"
@@ -60,6 +62,18 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:onClick="onAddItem"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/toContacts"
+        android:id="@+id/btnToContacts"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="10dp"
+        android:layout_above="@+id/btnAddItem"
+        android:onClick="toContacts"
         />
 
 </RelativeLayout>
